Fix 'This course section list overflows page' - #236.

--- a/style/menu.css
+++ b/style/menu.css
@@ -511,6 +511,8 @@ a.dropdown-item.i.fa.fa-users.fa-lg {
 }
 
 #adaptable-page-header-wrapper #main-navbar .navbar-nav .nav-item .dropdown-menu > .nav-item .dropdown-menu {
+    max-height: 400px;
+    overflow-x: auto;
     top: -1px;
 }
 
